--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,5 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.pip"]
-
-[phases.install]
-cmds = ["pip3 install discord.py aiohttp"]
+nixPkgs = ["python311", "python311Packages.discordpy", "python311Packages.aiohttp"]
 
 [start]
 cmd = "python3 main.py"
