--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["python311", "python311Packages.discordpy", "python311Packages.aiohttp"]
+nixPkgs = ["python311", "python311Packages.discordpy", "python311Packages.aiohttp", "ffmpeg"]
 
-[start]
+[começar]
 cmd = "python3 main.py"
